--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -5,7 +5,6 @@
     align-items: center;
 }
 
-
 .cfhome{
   background-color: #221F1F;
   color: #fff;
@@ -21,4 +20,6 @@
   }
 }
 
-
+.carousel-pictures{
+  padding: 80px 0px 120px 0px;
+}
