--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -50,13 +50,13 @@
         <!-- Controls -->
         <div class="left carousel-control">
           <a href="#carousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
             <span class="sr-only"></span>
           </a>
         </div>
         <div class="right carousel-control">
           <a href="#carousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
             <span class="sr-only"></span>
           </a>
         </div>
