--- a/app/assets/stylesheets/layouts/_carousel.scss
+++ b/app/assets/stylesheets/layouts/_carousel.scss
@@ -1,33 +1,35 @@
 .col-centered {
-    float: none;
-    margin: 0 auto;
+  float: none;
+  margin: 0 auto;
 }
 
 .carousel-control {
-    width: 8%;
-    width: 0px;
+  width: 0px;
 }
+
 .carousel-control.left,
 .carousel-control.right {
-    margin-right: 40px;
-    margin-left: 32px;
-    background-image: none;
-    opacity: 1;
+  margin-right: -10px;
+  margin-left: -45px;
+  margin-top: 110px;
+  background-image: none;
+  opacity: 1;
 }
 .carousel-control > a > span {
-    color: white;
-    font-size: 29px !important;
+  color: black;
+  font-size: 40px !important;
+  font-weight: 100 !important;
 }
 
 .carousel-col {
-    position: relative;
-    min-height: 1px;
-    padding: 5px;
-    float: left;
- }
+  position: relative;
+  min-height: 1px;
+  padding: 5px;
+  float: left;
+}
 
- .active > div { display:none; }
- .active > div:first-child { display:block; }
+.active > div { display:none; }
+.active > div:first-child { display:block; }
 
 /*xs*/
 @media (max-width: 767px) {
