--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
+  <%= link_to items_path, class: "navbar-wagon-brand" do %>
     <%= "waste'd" %>
   <% end %>
 
@@ -11,7 +11,7 @@
 
       <!-- Links when logged in -->
 
-      <%= link_to "Why us?", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <%= link_to  "Why us?", root_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Discover", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <% if current_user.role == ( 'supplier' || 'both' ) %>
@@ -43,7 +43,7 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to "Why us?", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <%= link_to "Why us?", root_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Discover", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
@@ -60,7 +60,7 @@
       <div class="dropdown">
         <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><%= link_to "Why us?", "#" %></li>
+          <li><%= link_to "Why us?", root_path %></li>
           <li><%= link_to "Discover", "#"  %></li>
           <li><%= link_to "Other one", "#" %></li>
           <li><%= link_to "Upload", new_item_path %></li>
