--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container-fluid footer">
   <div class="row">
-    <div class="col-xs-12 col-sm-4 footer-content">
+    <div class="col-sm-4 footer-content">
       <div class="mail-subscription">
         <h3> BE PART OF </h3>
         <p> Subscribe to stay up-to-date with our news</p>
@@ -28,7 +28,7 @@
       </p>
     </div>
   </div>
-  <div class="hidden-xs col-sm-4 footer-content">
+  <div class=" col-sm-4 hidden-xs footer-content">
     <div class="footer-links">
       <ul class="list-inline">
         <li>
