--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,8 +1,8 @@
 .caps {
   text-transform: uppercase;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .cfhome{
@@ -22,4 +22,9 @@
 
 .carousel-pictures{
   padding: 80px 0px 120px 0px;
+}
+
+/*sm*/
+@media (min-width: 368px) and (max-width: 991px) {
+  .home-two {  margin-top: 120px; }
 }
