Add new files for shopping cart components (_card_in_cart and _itemized_reservations) and modify css for _cart page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,8 @@
 @import "banner";
 @import "home";
 @import "button";
+@import "card_in_cart";
+@import "itemized_reservations";
 
 .filter-body {
   height: auto;
