--- a/app/views/reservations/_card_in_cart.html.erb
+++ b/app/views/reservations/_card_in_cart.html.erb
@@ -4,14 +4,16 @@
   <!-- Set picture -->
   <% if same_supplier_item.picture.present? %>
     <!-- Card-cart -->
-    <div class="item-cards">
+    <div class="item-card">
       <div class="card-body-cart" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path(same_supplier_item.picture) %>);">
         <!-- Everything inside the picture -->
         <div class="card-description-cart">
 
           <!-- item ID and clickable card -->
           <%= link_to "", item_path(same_supplier_item), class: 'card-link-cart' %>
-          <p class="item-number-cart">ID <%= same_supplier_item.id %> </p>
+          <p class="item-number-cart">ID
+            <%= same_supplier_item.name %>
+          </p>
           <!-- END item ID and clickable card -->
 
           <!-- Clickable icons on cart -->
@@ -62,12 +64,7 @@
       <div class="card-footer-cart">
         <p class="item-name-cart"> <%= same_supplier_item.name %></p>
         <p class="item-price-cart"><%= same_supplier_item.price %> $ </p>
-        <!-- Display stars -->
-        <p class="item-quantity-cart">
-          Available: <%= same_supplier_item.quantity.times %>
 
-        </p>
-        <!-- Display stars ends above this line -->
         <p class="item-name-cart">
           Added: <em><%= same_supplier_item.updated_at.strftime("%b %e, %l:%M %p") %></em>
         </p>
@@ -87,7 +84,10 @@
 
           <!-- item ID and clickable card -->
           <%= link_to "", item_path(same_supplier_item), class: 'card-link-cart' %>
-          <p class="item-number-cart">ID <%= same_supplier_item.id %> </p>
+          <p class="item-number-cart">
+            <%= same_supplier_item.name %> x
+            <%= same_supplier_item.quantity %>
+          </p>
           <!-- END item ID and clickable card -->
 
           <!-- Clickable icons on cart -->
@@ -95,22 +95,41 @@
             <!-- Set item's cart status based on current user -->
             <% status = 'available' %>
             <% @same_supplier_items.each do |same_supplier_item|
-              if same_supplier_item.user_id == current_user.id
-                status = 'in-cart'
-                @same_supplier_item = same_supplier_item
+              same_supplier_item.reservations.each do |item_reservation|
+                current_user.reservations.each do |user_reservation|
+
+                  if user_reservation.id == item_reservation.id
+                    status = 'in-cart'
+                    break
+                  end
+                break if status == 'in-cart'
+                end
+              break if status == 'in-cart'
               end
             end %>
 
             <!-- Icon to add to cart if not already in cart -->
             <% if status == 'available' %>
-              <%= simple_form_for @reservation, url: create_reservation_path, method: :post do |f|
-                f.error_notification
-                f.hidden_field :user, value: current_user.id
-                f.hidden_field :item_id, value: same_supplier_item.id
-                f.button :button, class: 'card-icon-cart' do %>
+
+              <%= simple_form_for @reservation, url: create_reservation_path, method: :post do |f| %>
+                <%= f.error_notification %>
+                <%= f.hidden_field :in_cart, value: true %>
+                <%= f.hidden_field :user_id, value: current_user.id %>
+                <%= f.hidden_field :item_id, value: same_supplier_item.id %>
+                   <%= f.button :button, class: 'card-icon-cart' do %>
                   <%= icon('fas', 'plus') %>
-                <% end
-              end %>
+                <% end %>
+              <% end %>
+
+
+
+
+
+
+
+
+
+
 
             <!-- Icon to remove from cart if already in cart -->
             <% elsif status == 'in-cart' %>
@@ -135,15 +154,13 @@
 
       <!-- Card footer -->
       <div class="card-footer-cart">
-        <p> Total items by seller: <%= @same_supplier_items.sample.user.items.size %></p>
-        <p>Random item by seller <%= same_supplier_item.user.name %>: <%= @same_supplier_items.sample.name %></p>
 
-        <p class="item-price-cart"><%= humanized_money_with_symbol(same_supplier_item.price) %> </p>
-        <!-- Display stars -->
-        <p class="item-quantity-cart">
-          Available: <%= same_supplier_item.quantity %>
+        <p>
+          Offered by: <%= same_supplier_item.user.name %> (<%= same_supplier_item.user.items.size %> dishes)
         </p>
-        <!-- Display stars ends above this line -->
+
+        <p class="item-price-cart"><%= humanized_money_with_symbol(same_supplier_item.price) %> ea.</p>
+
       </div>
       <!-- Card footer ends above this line -->
     </div>
