--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,8 +14,8 @@
       <%= link_to "Why us", home_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Discover", items_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
-      <% if current_user.role == ( 'supplier' || 'both' ) %>
-      <%= link_to "Upload", new_item_path , class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <% if policy(Item).create? %>
+        <%= link_to "Upload", new_item_path , class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <% end %>
 
       <!-- Avatar with dropdown menu -->
@@ -64,7 +64,9 @@
           <li><%= link_to "Why us", home_path %></li>
           <li><%= link_to "Discover", "#"  %></li>
           <li><%= link_to "Other one", "#" %></li>
-          <li><%= link_to "Upload", new_item_path %></li>
+          <% if policy(Item).create? %>
+            <li><%= link_to "Upload", new_item_path %></li>
+          <% end %>
           <li><%= link_to "Settings", new_item_path %></li>
           <li>
             <%= link_to destroy_user_session_path, method: :delete do %>
