--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
   <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   <%= stylesheet_pack_tag "map" %>
+  <%= stylesheet_pack_tag "application" %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
 
 </head>
