--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
 }
 #footer-anchors {
   text-align: left;
@@ -57,7 +58,7 @@
   color: white;
   border-bottom: 1px solid white;
   outline: none;
-  width: 200px;
+  width: 190px;
 }
 
 #exampleInputEmail1:focus {
