--- a/app/assets/stylesheets/layouts/_carousel.scss
+++ b/app/assets/stylesheets/layouts/_carousel.scss
@@ -33,22 +33,41 @@
 
 /*xs*/
 @media (max-width: 767px) {
-  .carousel-inner .active.left { left: -100%; }
-  .carousel-inner .active.right { left: 100%; }
-  .carousel-inner .next        { left:  100%; }
-  .carousel-inner .prev        { left: -100%; }
-  .carousel-col                { width: 100%; }
+  .carousel-inner .active.left { left: -50%; }
+  .carousel-inner .active.right { left: 50%; }
+  .carousel-inner .next        { left:  50%; }
+  .carousel-inner .prev        { left: -50%; }
+  .carousel-col                { width: 50%; }
   .active > div:first-child + div { display:block; }
+
+  .carousel-control.left,
+  .carousel-control.right {
+    margin-right: 10px;
+    margin-left: -30px;
+    margin-top: 110px;
+    background-image: none;
+    opacity: 1;
+  }
+
 }
 
 /*sm*/
 @media (min-width: 768px) and (max-width: 991px) {
-  .carousel-inner .active.left { left: -100%; }
-  .carousel-inner .active.right { left: 100%; }
-  .carousel-inner .next        { left:  100%; }
-  .carousel-inner .prev        { left: -100%; }
-  .carousel-col                { width: 100%; }
+  .carousel-inner .active.left { left: -50%; }
+  .carousel-inner .active.right { left: 50%; }
+  .carousel-inner .next        { left:  50%; }
+  .carousel-inner .prev        { left: -50%; }
+  .carousel-col                { width: 50%; }
   .active > div:first-child + div { display:block; }
+
+    .carousel-control.left,
+  .carousel-control.right {
+    margin-right: 10px;
+    margin-left: -30px;
+    margin-top: 110px;
+    background-image: none;
+    opacity: 1;
+  }
 }
 
 /*md*/
