--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <div class="container home-one">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="caps">We are the new recyclers in town.</h2>
+        <h2 class="caps caps1">We are the new recyclers in town.</h2>
       </div>
       <div class="col-md-6">
         <p>Eat for a fair price and save unsold food from being wasted. Over 1/3 of all food produced globally goes to waste. The annual value of food wasted globally is $1 trillion, and it weighs 1.3 billion tonnes. Restaurants and cafes throw away food that they can't sell anymore everyday. Food is wasted and money is lost. Let's change that.</p>
@@ -16,17 +16,24 @@
 
 <div class="container home-two">
   <div class="row">
-    <div class="col-md-4 caps">
-      <div class="image" ><%= image_tag "revenue.svg" %></div>
+    <div class="col-sm-12 col-md-4 caps">
+      <div class="whatever">
+          <div class="image"><%= image_tag "revenue.svg" %></div>
       INCREASE REVENUE
+      </div>
+
     </div>
-    <div class="col-md-4 caps">
+    <div class="col-sm-12 col-md-4 caps">
+      <div class="whatever">
       <div class="image"><%= image_tag "piggy-bank.svg" %></div>
       REDUCE COSTS
+      </div>
     </div>
-    <div class="col-md-4 caps">
-      <div class="image"> <%= image_tag "success.svg" %></div>
+    <div class="col-sm-12 col-md-4 caps">
+      <div class="whatever">
+      <div class="image"><%= image_tag "success.svg" %></div>
       IMPROVE BRAND IMAGE
+      </div>
     </div>
   </div>
 </div>
@@ -35,7 +42,7 @@
   <div class="container home-three">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="caps">This is how waste'd works.</h2>
+        <h2 class="caps caps1">This is how waste'd works.</h2>
       </div>
       <div class="col-md-6">
         <ol>
