--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,7 +6,6 @@
   color: white;
   position: relative;
   font-family: 'Roboto', sans-serif;
-
 }
 
 .content {
@@ -55,6 +54,16 @@
   top: 10px;
   right: 10px;
   cursor: pointer;
+  background-color: transparent;
+  font-size: 20px;
+  z-index: 5;
+  // color: #ddd !important;
+  &:hover {
+    color: #da552f !important;
+  }
+  &:focus {
+    outline: 0;
+  }
 }
 
 .item-description {
