--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,6 +1,80 @@
 <div  data-toggle="modal" data-target="#myModal-<%= item.id %>">
   <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;">
-    <div class="add"><i class="fas fa-plus"></i></div>
+    <!-- <div class="add"> -->
+
+
+
+
+
+        <!-- Icons to add or remove from cart -->
+        <div class="card-btn">
+
+          <!-- Set item's cart status based on current user -->
+          <%  if user_signed_in? && !params[:arena_id].present?
+                # Marked item as owned
+                if current_user.id == item.user_id
+                  status = 'owned'
+                # Mark item as available
+              else
+                status = 'available'
+              end
+                # Mark item as in cart
+
+                @reservations.each do |reservation|
+                  if reservation.item_id == item.id && reservation.user_id == current_user.id
+                    status = 'reserved'
+                    @reservation = reservation
+                  end
+                  end %>
+
+                  <!-- Icon: item owned -->
+                  <% if status == 'owned' %>
+                  <%= link_to icon('fas', 'user'), item_path(item),
+                  class: 'card-icon',
+                    data: { confirm: "You already own this item. Go to his page?" } %>
+
+                    <!-- Icon: Add item to cart -->
+                    <% elsif status == 'available' %>
+                    <%= simple_form_for @reservation, url: create_reservation_path, method: :post do |f| %>
+                      <%= f.error_notification %>
+                      <%= f.hidden_field :user_id, value: current_user.id %>
+                      <%= f.hidden_field :item_id, value: item.id %>
+                         <%= f.button :button, class: 'add' do %>
+                        <%= icon('fas', 'plus') %>
+                      <% end %>
+                    <% end %>
+
+
+
+                    <!-- Icon: Remove item from cart -->
+                    <% elsif status == 'reserved'%>
+                    <div class='add'>
+                      <%= @reservation.quantity %> in cart
+                    </div>
+
+
+                    <!-- Don't show an icon if something weird happens -->
+                    <% else %>
+                    <% end %>
+                    <% end %>
+
+                  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- </div> -->
     <div class="card-description">
       <h2><%= item.name %></h2>
     </div>
