--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -1,4 +1,3 @@
-
 #user-show {
   margin-top: 25px;
   background-color:white;
@@ -22,18 +21,18 @@
 }
 
 #items-rescued h3{
-      font-family: "Montserrat";
-    font-size: 30px;
+  font-family: "Montserrat";
+  font-size: 30px;
 }
 
 #money-saved h3{
-      font-family: "Montserrat";
-    font-size: 30px;
+  font-family: "Montserrat";
+  font-size: 30px;
 }
 
 #kg-saved h3{
-      font-family: "Montserrat";
-    font-size: 30px;
+  font-family: "Montserrat";
+  font-size: 30px;
 }
 
 .user-card-title{
@@ -44,28 +43,28 @@
   justify-content: space-between;
   align-items: baseline;
   h2{
-  font-family:·"Roboto";
-  font-size: 15px;
-}
-a{
-  color:black;
-}
+    font-family:·"Roboto";
+    font-size: 15px;
+  }
+  a{
+    color:black;
+  }
 
 }
 
-.background-color-profile{
-  background-color:black;
+.background-color-profile {
+  background-color: white;
 }
 
 .style-user-profile{
 
-    display: flex;
-    align-items: center;
-    margin: 20px auto;
-    align-items: center;
-    justify-content: center;
-    background-color:white;
-    margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  margin: 20px auto;
+  align-items: center;
+  justify-content: center;
+  background-color:white;
+  margin-bottom: 30px;
 }
 
 .user-card-details{
@@ -74,25 +73,25 @@ a{
     margin: 0;
     color:gray;
     font-family: "Montserrat";
-}
+  }
 }
 
 #items-rescued {
   justify:center;
   h3{
-  margin-top:0;
-  text-align: center;
-}
-h2{
-  margin-top:0;
-  text-align: center;
-  font-size: 25px;
-}
+    margin-top:0;
+    text-align: center;
+  }
+  h2{
+    margin-top:0;
+    text-align: center;
+    font-size: 25px;
+  }
 }
 
 
 .img-circle {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 
@@ -112,11 +111,34 @@ h2{
 
 .img-circle{
 
-    border-radius: 50%;
+  border-radius: 50%;
 
 }
 
 
 .profile-value {
   display: flex;
+}
+
+
+
+#profile-picture {
+  display: flex;
+  padding-top: 80px;
+  align-items: center;
+  justify-content: center;
+}
+
+#items-holder {
+  padding: 50px 40px;
+  p, h2, h3 {
+    margin: 0;
+    font-family: "Montserrat", sans-serif;
+  }
+  div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
