--- a/app/views/shared/_card_modal.html.erb
+++ b/app/views/shared/_card_modal.html.erb
@@ -45,18 +45,149 @@
             <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4">
               <div class=" form-modal">
                 <label>Quantity: </label>
+
+
+
+
+                <!-- Set item's cart status based on current user -->
+                <%  if user_signed_in?
+                      # Marked item as owned
+                      if current_user.id == item.user_id
+                        status = 'owned'
+                      # Mark item as available
+                      else
+                        status = 'available'
+                        @reservation.item = item
+                      end
+
+                      # Mark item as in cart
+                      @reservations.each do |reservation|
+                        if reservation.item_id == item.id && reservation.user_id == current_user.id
+                          status = 'reserved'
+                          @reservation = reservation
+                        end
+                      end
+                    end %>
+
+
+
+                <!-- QUANTITY AND PLUS/MINUS BUTTONS -->
+                <div class="quantity">
+
+                  <!-- MINUS BUTTON -->
+                  <% if item.quantity > 1 && status == 'reserved' %>
+                    <%= simple_form_for @reservation, url: @reservation, method: :patch do |f| %>
+                      <%= f.error_notification %>
+                      <%= f.hidden_field :in_cart, value: true %>
+                      <%= f.hidden_field :quantity, value: @reservation.quantity - 1 %>
+                         <%= f.button :button, class: 'glyphicon glyphicon-minus' do %>
+                        <%= onclick="down('0')" %>
+                      <% end %>
+                    <% end %>
+                  <% elsif @reservation.quantity == 1 %>
+                    <%= simple_form_for @reservation, url: @reservation, method: :delete do |f| %>
+                      <%= f.error_notification %>
+                      <%= f.hidden_field :in_cart, value: true %>
+                      <%= f.button :button, class: 'plus-minus' do %>
+                        <%= icon('fas', 'minus') %>
+                      <% end %>
+                    <% end %>
+                  <% end %>
+                  <!-- END MINUS BUTTON -->
+
+
+
+
+
+
+
+
+
+
+
+
                 <div class="input-group">
                   <div class="input-group-btn">
-                    <button id="down" class="btn btn-default circles" onclick=" down('0')"><span class="glyphicon glyphicon-minus"></span></button>
+                    <button id="down" class="btn btn-default circles" onclick="down('0')">
+                      <span class="glyphicon glyphicon-minus"></span>
+                    </button>
                   </div>
+
                   <input type="text" id="myNumber" class="form-control input-number circle" value="1" />
+
                   <div class="input-group-btn">
-                    <button id="up" class="btn btn-default circles" onclick="up(<%= item.quantity %>)"><span class="glyphicon glyphicon-plus"></span></button>
+                    <button id="up" class="btn btn-default circles" onclick="up(<%= item.quantity %>)">
+                      <span class="glyphicon glyphicon-plus"></span>
+                    </button>
                   </div>
                 </div>
+
+
+
+
+
+
+
+
+                  <%= @reservation.quantity %>
+
+                  <!-- PLUS BUTTON -->
+                  <% if @reservation.quantity < @reservation.item.quantity %>
+                    <%= simple_form_for @reservation, url: @reservation, method: :patch do |f| %>
+                      <%= f.error_notification %>
+                      <%= f.hidden_field :in_cart, value: true %>
+                      <%= f.hidden_field :quantity, value: @reservation.quantity + 1 %>
+                         <%= f.button :button, class: 'plus-minus' do %>
+                        <%= icon('fas', 'plus') %>
+                      <% end %>
+                    <% end %>
+                  <% else %>
+                    <%= simple_form_for @reservation do |f| %>
+                      <%= f.error_notification %>
+                         <%= f.button :button, disabled: true, class: 'plus-minus' do %>
+                        <%= icon('fas', 'plus') %>
+                      <% end %>
+                    <% end %>
+                  <% end %>
+                  <!-- END PLUS BUTTON -->
+
+                </div>
+                <!-- END QUANTITY AND PLUS/MINUS BUTTONS -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
               </div>
             </div>
-
             <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
               <button type="button" class="btn btn-dark btn-lg">ADD TO CART</button>
             </div>
