--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,24 +1,105 @@
 .banner {
-  background-image: url("veggies.png");
+  background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url("veg.png");
   color: white;
   text-align: center;
-  height: 100vh;
-  width: 100%;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background-size: cover !important;
+  height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.banner h1 {
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+
+.cat-container {
+  text-align: center;
+  h1 {
+    padding-top: 215px;
+    margin: 0;
+    padding-bottom: 35px;
+    font-weight: bold;
+    text-shadow: 3px 5px rgba(0, 0, 0, 0.7);
+    font-family: "Roboto", sans-serif;
+    font-size: 90px;
+  }
 }
-.banner p {
-  font-size: 25px;
-  font-weight: lighter;
-  color: rgb(255, 255, 255);
-  opacity: 0.6;
-  margin-bottom: 30px;
+.cat-parent{
+  font-size:12px;
+  font-family: "Roboto";
+  display: block;
+  font-weight: bold;
+}
+.cat-container{
+  display: block;
+  height: auto;
+  margin-bottom: 10px;
+}
+.cat-filter-container{
+  position: relative;
+  height: 32px;
+  border-bottom: 2px solid black;
+  margin-bottom: 25px;
+  margin-top: 50px;
+}
+.filter-save-btn{
+  border-radius:1px;
+}
+.cat-filter{
+  position: absolute;
+  left: 0;
+  right: 0;
+  max-height: 30px;
+  transition: box-shadow .1s ease-in-out,max-height .3s cubic-bezier(.25,.46,.45,.94);
+  overflow: hidden;
+  z-index: 1;
+}
+.filter-btn{
+  border: none !important;
+  background-color: transparent !important;
+  font-size:bold;
+  z-index: 1;
+  padding: 0 !important;
+  weight: 45px;
+}
+.cat_filter_box {
+    opacity: 1;
+    border: 1px solid #ddd;
+    border-top-width: 2px;
+    border-top-color: #0062b4;
+    margin-top: 0;
+    padding-top: 11px;
+}
+.cat_item_list {
+    overflow-y: auto;
+    overflow-x: hidden;
+    min-height: 180px;
+    max-height: 300px;
+    height: 40vh;
+    margin-right: 12px;
+    color: #1a1a1a;
+    transform: translateZ(0);
+}
+.cat-filter-head {
+  position: relative;
+  cursor: pointer;
+  padding: 3px 12px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #333;
+  letter-spacing: .5px;
+  font-size: 10px !important;
+}
+.filter-apply-btn{
+    border: none;
+    background: #ddd;
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+    padding: 0 15px;
+    line-height: 40px;
+    text-align: left;
+    font-weight: 700;
+    color: #1a1a1a;
+}
+.cat_main {
+    font-size: 42px;
+    line-height: 48px;
+    font-family: "Roboto";
 }
