--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,22 +1,15 @@
 <%= simple_form_for item do |f| %>
 <%= f.error_notification %>
 
-<div class="container">
+<div class="container" id="formnew">
    <div class="col-md-8 col-md-offset-2">
-  <h3>Add Food</h3>
-  <div><%= f.input :name, input_html: { class: "input-bar"} %></div>
-  <div><%= f.input :description, input_html: { class: "input-bar"} %></div>
-  <div><%= f.input :address, input_html: { class: "input-bar"} %></div>
-  <div><%= f.input :category, input_html: { class: "input-bar"}, collection: Item::CATEGORY %></div>
-  <div><%= f.input :food_type, input_html: { class: "input-bar"}, collection: Item::TYPES %></div>
+  <h3 style="margin-top: 20px; margin-left: -20px; margin-bottom: 20px;">Add Food</h3>
+  <div class="row"><%= f.input :name, input_html: { class: "input-bar"} %></div>
+  <div class="row"><%= f.input :description, input_html: { class: "input-bar"} %></div>
+  <div class="row"><%= f.input :address, input_html: { class: "input-bar"} %></div>
+  <div class="row"><%= f.input :category, input_html: { class: "input-bar"}, collection: Item::CATEGORY %></div>
+  <div class="row"><%= f.input :food_type, input_html: { class: "input-bar"}, collection: Item::TYPES %></div>
 
-  <div><%= f.input :expiration, as: :string, class: "datepicker" %></div>
-
-
-  <div><%= f.input :pickup_time, as: :string, class: "datepicker" %></div>
-
-  <%= f.input :picture %>
-  <%= f.input :picture_cache, as: :hidden %>
   <div class="row">
     <div class="col-md-6">
       <div><%= f.input :price, input_html: { class: "input-bar"} %></div>
@@ -25,7 +18,19 @@
       <div><%= f.input :quantity, input_html: { class: "input-bar"} %></div>
     </div>
   </div>
-  <div style="margin:20px;"><%= f.button :submit  %></div>
+
+<div class="row">
+  <div class="col-md-6">
+  <div><%= f.input :pickup_time, as: :string, input_html: { id: "start_date"} %></div>
+</div>
+  <div class="col-md-6">
+  <div><%= f.input :expiration, as: :string, input_html: { id: "end_date"} %></div>
+</div>
+
+</div>
+  <%= f.input :picture %>
+  <%= f.input :picture_cache, as: :hidden %>
+  <div style="margin:20px 0px;"><%= f.button :submit  %></div>
   <% end %>
 </div>
 </div>
