--- a/app/assets/stylesheets/components/_itemized_reservations.scss
+++ b/app/assets/stylesheets/components/_itemized_reservations.scss
@@ -1,11 +1,17 @@
 .itemized-by-supplier {
   margin-bottom: 20px;
-  border: 1px solid #ccc;
+
   .supplier-name {
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+    font-family: "Monsterrat" sans-serif;
     font-weight: bold;
   }
+}
+
+.cart-items-list2 {
+    display: flex;
+    align-items: center;
 }
 
 .reservation {
@@ -30,8 +36,64 @@
   }
 }
 
+.btn-checkout{
+      border: 0px;
+    background-color: black;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+    display: flex;
+    :hover {
+    background-color: white !important;
+    color: black !important;
+    border-bottom: 2px solid black !important;
+    }
+}
+
+
+.shopping-cart-box h3{
+  font-family: "Roboto" !important;
+  font-size:25px;
+  margin-top: 15px;
+  align-items: center;
+  text-align: center;
+  font-weight: bolder;
+}
+
+
+.shopping-cart-container {
+  border: 0px !important;
+  border-left: 1px solid black !important;
+  align-items: center;
+  background-color: white;
+      display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.total-prices-container {
+  border-top: 1px solid black;
+  h5{
+    font-family: "Monsterrat", sans-serif !important;
+    font-size: 20px;
+    padding-left: 20px;
+  }
+   h6{
+    font-family: "Monsterrat", sans-serif !important;
+    font-size: 20px;
+    padding-left: 20px;
+  }
+  h4{
+
+    font-family: "Monsterrat", sans-serif !important;
+    font-size: 20px;
+    border-top: 1px solid black;
+    padding: 20px;
 
 
 
-
+  }
+}
 
