Fix shopping cart checkout button

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -27,12 +27,12 @@
   <!--     <h5>Items: <%= @total_items %></h5> -->
       <h5>Subtotal: <%= humanized_money_with_symbol(@subtotal_price) %></h5>
       <h6>5% site fee: <%= humanized_money_with_symbol(@commission) %></h6>
-      <h4>Total price: <%= humanized_money_with_symbol(@total_price) %></h4>
+      <h4>Total price: <%= humanized_money_with_symbol(@amount) %></h4>
     </div>
     <!-- END PRICES -->
 
     <!-- CHECKOUT FORM to send params -->
-    <%= link_to "Checkout", purchased_items_path(amount_cents: @amount_cents, reservations: @reservations), method: :post, class: 'btn btn-danger btn-lg btn-checkout' %>
+    <%= link_to "Checkout", purchased_items_path(amount: @amount, reservations: @reservations), method: :post, class: 'btn btn-danger btn-lg btn-checkout' %>
     <!-- END CHECKOUT FORM to send params -->
 
   </div>
