--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,7 @@
       <%= link_to "Why us", home_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Discover", items_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <%= link_to "Shopping Cart", cart_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <% if policy(Item).create? %>
         <%= link_to "Upload", new_item_path , class: "navbar-wagon-item navbar-wagon-link underline-black" %>
 
@@ -64,6 +65,7 @@
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li><%= link_to "Why us", home_path %></li>
           <li><%= link_to "Discover", "#"  %></li>
+          <li><%= link_to "Shopping Cart", cart_path  %></li>
           <% if policy(Item).create? %>
             <li><%= link_to "Upload", new_item_path %></li>
           <% end %>
