Adjust 500 error page.

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -27,8 +27,8 @@
 <% end %>
 
   <% @items.each do |item| %>
-  <%= render 'shared/card_modal', item: item %>
-  <% end %>
+<!--   <%= #render 'shared/card_modal', item: item %>
+ -->  <% end %>
 
 <% if @query.present? %>
   <div class="container">
