--- a/app/views/reservations/_card_in_cart.html.erb
+++ b/app/views/reservations/_card_in_cart.html.erb
@@ -52,7 +52,7 @@
                   <%= f.hidden_field :user, value: current_user.id %>
                   <%= f.hidden_field :item_id, value: @reservation.id %>
                   <%= f.hidden_field :in_cart, value: true %>
-                  <%= f.hidden_field :quantity, value: (reservation.quantity + 1) %>
+                  <%= f.hidden_field :quantity, value: (@reservation.quantity + 1) %>
                   <%= f.button :button, class: 'card-icon-cart' do %>
                   <%= icon('fas', 'minus') %>
                   <% end %>
