--- a/app/views/shared/_card_modal.html.erb
+++ b/app/views/shared/_card_modal.html.erb
@@ -75,7 +75,7 @@
 
                   <!-- MINUS BUTTON -->
                   <% if item.quantity > 1 && status == 'reserved' %>
-                    <%= simple_form_for @reservation, url: @reservation, method: :patch do |f| %>
+                    <%= simple_form_for @reservation, url: patch_reservation_path(@reservation) do |f| %>
                       <%= f.error_notification %>
                       <%= f.hidden_field :in_cart, value: true %>
                       <%= f.hidden_field :quantity, value: @reservation.quantity - 1 %>
@@ -132,7 +132,7 @@
 
                   <!-- PLUS BUTTON -->
                   <% if @reservation.quantity < @reservation.item.quantity %>
-                    <%= simple_form_for @reservation, url: @reservation, method: :patch do |f| %>
+                    <%= simple_form_for @reservation, url: patch_reservation_path(@reservation) do |f| %>
                       <%= f.error_notification %>
                       <%= f.hidden_field :in_cart, value: true %>
                       <%= f.hidden_field :quantity, value: @reservation.quantity + 1 %>
