--- a/app/views/reservations/_card_in_cart.html.erb
+++ b/app/views/reservations/_card_in_cart.html.erb
@@ -118,7 +118,7 @@
                     <!-- Icon to add to cart if not already in cart -->
                     <% if status == 'available' %>
 
-                    <%= simple_form_for @reservation, url: create_reservation_path, method: :post do |f| %>
+                    <%= simple_form_for @reservation, url: create_reservation_path do |f| %>
                     <%= f.error_notification %>
                     <%= f.hidden_field :in_cart, value: true %>
                     <%= f.hidden_field :user_id, value: current_user.id %>
